fix result view overflow scroll

--- a/frontend/synctalk/src/pages/ResultPage/ResultPage.css
+++ b/frontend/synctalk/src/pages/ResultPage/ResultPage.css
@@ -15,6 +15,8 @@
   position: fixed;
   top: 0;
   color: #1d3557;
+  background-color: white;
+  z-index: 1;
 }
 
 .result .body {
@@ -30,7 +32,10 @@
 
 .result .text-container {
   position: relative;
-  top: 5%;
+  height: 95%;
+  top: 1%;
+  bottom: 5%;
+  overflow-y: scroll;
 }
 
 .result .body .text-with-speaker {
